# Distance-Estimated-3D-Fractals

./: .clang-tidy  CMakeLists.txt  Cargo.toml  README.md  flake.nix
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  StandardProjectSettings.cmake
dependencies/: fetch_sokol.sh
docs/: common.js  distorted_sphere.html  index.html  simple_fractal.html  weird_shape.html
public/: common.js  distorted_sphere.html  index.html
scripts/: build_clean.sh  build_gcc_debug.sh  build_gcc_release.sh  check_clang_format.sh  compile_shaders.sh  run_clang_format.sh  run_clang_tidy.sh
src/: CMakeLists.txt  distorted_sphere.c  distorted_sphere.glsl  distorted_sphere.glsl.h  main.rs  shader.wgsl  sokol.c
